--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <div class="card col-12 col-lg">
                 <div class="card-wrapper">
                     <h6 class="card-title mbr-fonts-style mb-4 display-5"><strong>Bot Service</strong></h6>
+                  <iframe src='https://webchat.botframework.com/embed/quadbot-bot?s=nKRP289umq8.B7GA1-Bv_Yo0hjWV9E45MnvwFxQd1h5PUgM90UehyzQ'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
                     
                     
                 </div>
@@ -213,7 +214,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2903207" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+
   
   
 </body>
